# dockingpanes

./: .gitignore  CMakeLists.txt  DockAutoHideButton.cpp  DockAutoHideButton.h  DockingFrameFrameSticker.cpp  DockingFrameStickers.cpp  DockingFrameStickers.h  DockingPaneBase.cpp  DockingPaneClient.cpp  DockingPaneClient.h  DockingPaneContainer.cpp  DockingPaneContainer.h  DockingPaneFlyoutWidget.cpp.autosave  DockingPaneFlyoutWidget.h  DockingPaneGlow.cpp  DockingPaneGlowWidget.cpp  DockingPaneGlowWidget.cpp.autosave  DockingPaneGlowWidget.h  DockingPaneManager.cpp  DockingPaneManager.h  DockingPaneSplitterContainer.cpp  DockingPaneSplitterContainer.h  DockingPaneTabWidget.cpp  DockingPaneTabWidget.h  DockingPaneTabbedContainer.cpp  DockingPaneTabbedContainer.cpp.autosave  DockingPaneTabbedContainer.h  DockingPaneTitleWidget.cpp  DockingPanes.pro  DockingTargetWidget.cpp  DockingToolButton.cpp  README.md  dockingpanebase.h
examples/: examples.pro
examples/simple/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simple.pro
src/: CMakeLists.txt  DockAutoHideButton.cpp  DockAutoHideButton.h  DockingFrameFrameSticker.cpp  DockingFrameFrameSticker.h  DockingFrameStickers.cpp  DockingFrameStickers.h  DockingPaneBase.cpp  DockingPaneBase.h  DockingPaneClient.cpp  DockingPaneClient.h  DockingPaneContainer.cpp  DockingPaneContainer.h  DockingPaneFlyoutWidget.cpp  DockingPaneFlyoutWidget.h  DockingPaneGlow.cpp  DockingPaneGlow.h  DockingPaneGlowWidget.cpp  DockingPaneGlowWidget.h  DockingPaneManager.cpp  DockingPaneManager.h  DockingPaneSplitterContainer.cpp  DockingPaneSplitterContainer.h  DockingPaneTabWidget.cpp  DockingPaneTabWidget.h  DockingPaneTabbedContainer.cpp  DockingPaneTabbedContainer.h  DockingPaneTitleWidget.cpp  DockingPaneTitleWidget.h  DockingPanes.pro  DockingPanes_global.h  DockingTargetWidget.cpp  DockingTargetWidget.h  DockingToolButton.cpp  DockingToolButton.h  images.qrc
src/resources/: images.qrc
